logos somehow the web page loading starts to fail. need to debug

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer id="footer">
     <div class="container">
         <div class="row">
-            <div id="screenly-logo" class="col-12 row m-2 ml-0 mr-0">
+            <div id="sulofi-logo" class="col-12 row m-2 ml-0 mr-0">
                 <div class="links offset-3 col-6 text-center justify-content-center align-self-center">
                     <a href="/api/docs/" target="_blank" class="mr-4 small">
                         API
@@ -9,19 +9,19 @@
                     <a href="https://app-store.srly.io/" target="_blank" class="mr-4 small">
                         App Store
                     </a>
-                    <a href="https://support.screenly.io/hc/en-us/sections/202652366-Frequently-Asked-Questions-FAQ-" target="_blank" class="mr-4 small">
+                    <a href="https://support.sulofi.com/hc/en-us/sections/202652366-Frequently-Asked-Questions-FAQ-" target="_blank" class="mr-4 small">
                         Knowledge Base
                     </a>
-                    <a href="http://screenly.io/" target="_blank" class="mr-4 small">
-                        Screenly.io
+                    <a href="http://sulofi.com/" target="_blank" class="mr-4 small">
+                        sulofi.com
                     </a>
-                    <a href="https://forums.screenly.io/" target="_blank" class="mr-4 small">
+                    <a href="https://forums.sulofi.com/" target="_blank" class="mr-4 small">
                         Support
                     </a>
                 </div>
 
                 <div id="github-stars" class="col-3 text-right justify-content-center align-self-center">
-                    <a class="github-button" href="https://github.com/screenly/screenly-ose" data-size="large" data-show-count="true" aria-label="Star screenly/screenly-ose on GitHub">
+                    <a class="github-button" href="https://github.com/vishalbalhara/screenfi" data-size="large" data-show-count="true" aria-label="Star sulofi on GitHub">
                         Star
                     </a>
                 </div>
@@ -31,7 +31,7 @@
     <div class="copy">
         <div class="container">
             <div class="text-center p-2">
-                &copy; Screenly, Inc.
+                &copy; Sulofi, Inc.
             </div>
         </div>
     </div>
