--- a/templates/settings.html
+++ b/templates/settings.html
@@ -318,7 +318,7 @@
                 {# Upgrade #}
                 <div id="upgrade-section" class="col-12 mb-5">
                     <h4 class="page-header">
-                        <b>Upgrade Screenly</b>
+                        <b>Upgrade ScreenFi</b>
                     </h4>
                     <hr>
                     <div class="text-right">
@@ -331,7 +331,7 @@
                         <div class="modal-content">
                             <div class="form-horizontal">
                                 <div class="modal-header">
-                                    <h3 id="modalLabel">Upgrade Screenly</h3>
+                                    <h3 id="modalLabel">Upgrade ScreenFi</h3>
                                 </div>
                                 <div class="modal-body">
                                     <form id="upgrade-form">
@@ -353,7 +353,7 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-12 col-form-label text-left">Do you want Screenly to
+                                            <label class="col-12 col-form-label text-left">Do you want ScreenFi to
                                                 manage
                                                 your
                                                 network? This is recommended for most users.</label>
@@ -425,8 +425,8 @@
                     </h4>
                     <hr>
                     <div class="text-right">
-                        <button id="btn-reboot-system" class="btn btn-danger btn-long" type="button">Reboot Screenly</button>
-                        <button id="btn-shutdown-system" class="btn btn-danger btn-long" type="button">Shutdown Screenly
+                        <button id="btn-reboot-system" class="btn btn-danger btn-long" type="button">Reboot ScreenFi</button>
+                        <button id="btn-shutdown-system" class="btn btn-danger btn-long" type="button">Shutdown ScreenFi
                         </button>
                     </div>
                 </div>
