--- a/templates/base.html
+++ b/templates/base.html
@@ -19,16 +19,16 @@
         <div class="col-6 small">
             <span>Want to get more out of your digital signage?
               <a class="brand"
-                 href="https://www.screenly.io/?utm_source=Screenly-OSE&amp;utm_medium=root-page&amp;utm_campaign=OSE"
+                 href="https://www.sulofi.com"
                  target="_blank">
-                <strong>Try the commercial version of Screenly.</strong>
+                <strong>Try screenfi cloud.</strong>
               </a></span>
         </div>
         <div class="col-6 text-right small">
             <span>
               <a href="javascript://" id="subsribe-form-container" data-html="true" data-trigger="focus"
                  data-placement="top">
-                <strong>Get the latest Screenly news directly in your mailbox.</strong>
+                <strong>Get the latest sulofi news directly in your mailbox.</strong>
               </a>
             </span>
         </div>
