--- a/templates/head.html
+++ b/templates/head.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8"/>
 
 {% if context.player_name %}
-    <title>Screenly OSE - {{ context.player_name }}</title>
+    <title>ScreenFi - {{ context.player_name }}</title>
 {% else %}
-    <title>Screenly OSE</title>
+    <title>ScreenFi</title>
 {% endif %}
 
 <link href="/static/favicons/apple-touch-icon-57x57.png" rel="apple-touch-icon-precomposed" sizes="57x57"/>
@@ -19,7 +19,7 @@
 <link href="/static/favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
 <link href="/static/favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
 <link href="/static/favicons/favicon-128.png" rel="icon" sizes="128x128" type="image/png"/>
-<meta content="screenly-ose;" name="application-name"/>
+<meta content="screenfi;" name="application-name"/>
 <meta content="#FFFFFF" name="msapplication-TileColor"/>
 <meta content="/static/favicons/mstile-144x144.png" name="msapplication-TileImage"/>
 <meta content="/static/favicons/mstile-70x70.png" name="msapplication-square70x70logo"/>
@@ -34,19 +34,3 @@
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 <script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
-
-{% if context.is_demo %}
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37846380-3"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'UA-37846380-3');
-    </script>
-{% endif %}
