--- a/templates/system-info.html
+++ b/templates/system-info.html
@@ -52,7 +52,7 @@
                         <td>{{ context.raspberry_pi_model }}</td>
                     </tr>
                     <tr>
-                        <th scope="row">Screenly OSE Version</th>
+                        <th scope="row">ScreenFi Version</th>
                         <td>{{ context.screenly_version }}</td>
                     </tr>
                     <tr>
